# fishing-assistant

./: LICENSE  MANIFEST.in  README.md  env.example  pyproject.toml
reports/: fishing_report_2025_11_01.md  fishing_report_2025_11_02.md
src/fishing_assistant/: __init__.py  crew.py  main.py
src/fishing_assistant/config/: agents.yaml  tasks.yaml
src/fishing_assistant/tools/: __init__.py  custom_tool.py  location_discovery.py
